Fix #2083
This changes the Suggestions to be a single column, not a wrapping row,
changing the input to be incapable of overflowing into visually adjacent
elements.

--- a/searx/static/themes/simple/src/less/style.less
+++ b/searx/static/themes/simple/src/less/style.less
@@ -532,7 +532,7 @@ article[data-vim-selected].category-social {
 #suggestions {
   .wrapper {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     justify-content: flex-end;
 
     form {
@@ -552,6 +552,10 @@ article[data-vim-selected].category-social {
     background: transparent;
     color: var(--color-result-search-url-font);
     cursor: pointer;
+    width: calc(100%);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: left;
   }
 
   input[type="submit"],
